# databricks-demo-feature-store

./: .gitignore  README.md  databricks.yml  requirements.txt  setup_configs.md
config/dev/job_resources/: feature-store-bncapers-resource.yml  feature-store-medpag-resource.yml
config/prod/job_resources/: feature-store-bncapers-resource.yml  feature-store-medpag-resource.yml
notebooks/: dummy_data_generation.py  feature_store_register.py  globals.py  notebooks_orchestator.py  utils.py
notebooks/development/: fs_cus_credit_risk.py  fs_cus_demographic.py  fs_cus_holding_products.py  fs_cus_payment_behavior.py  fs_cus_transactions.py
notebooks/production/: fs_cus_credit_risk.py  fs_cus_demographic.py  fs_cus_holding_products.py  fs_cus_payment_behavior.py  fs_cus_transactions.py
src/: pyproject.toml  requirements.txt
